# cDGM4Planning

./: .gitignore  README.md  main_inference.py  nohup.out  nohup2.out  pyproject.toml  requirements.txt  test.py
config/: config_gan.yaml  config_gan_linear.yaml  cvae_test.yaml  ddpm_ore_maps.yaml  ddpm_test.yaml  ddpm_test_sequential.yaml  gan_ore_maps.yaml  gan_sequential.yaml  run_config.yaml  run_config_atienza.yaml  run_config_injection.yaml  tests_gens.yaml
configs_cond_tests/: image_test.yaml  test_all.yaml  test_specific.yaml
configs_runs/: ddpm_ore_maps_100.yaml  ddpm_ore_maps_1000.yaml  ddpm_ore_maps_100_example.yaml  ddpm_ore_maps_150.yaml  ddpm_ore_maps_200.yaml  ddpm_ore_maps_250.yaml  ddpm_ore_maps_250_smaller.yaml  ddpm_ore_maps_500.yaml  ddpm_ore_maps_500_smaller.yaml  gan_ore_maps_1inject_noT.yaml  gan_ore_maps_2inject.yaml  gan_ore_maps_2inject_wgp.yaml  gan_ore_maps_T_nowgp_noinject.yaml  gan_ore_maps_example.yaml  gan_ore_maps_fullSN.yaml  gan_ore_maps_fullSN_wgp.yaml  gan_ore_maps_fullinject.yaml  gan_ore_maps_fullinject_noT.yaml  gan_ore_maps_noinject.yaml  gan_ore_maps_nowgp_noinject.yaml  gan_ore_maps_testarchi.yaml  gan_ore_maps_w_full_inject.yaml  gan_ore_maps_w_full_inject_diff_discriminator.yaml  resnet_gan.yaml  style-gan_ludicrains.yaml  style-gan_ore_maps.yaml  style-gan_simple.yaml
configs_tests/: gan_ore_maps_1inject_noT.yaml  gan_ore_maps_fullinject_noT.yaml  gan_ore_maps_fullinject_w_linear.yaml  update_conf_for_tests.yaml
configs_visualize/: visualize.yaml
datagen/: minex_datagen.jl  spillpoint_datagen.jl
notebooks/: data.ipynb
planning/: README.md  belief_metrics.jl  compare_beliefs.jl  experiment_utils.jl  experiments.jl  generative_GP_belief.jl  generative_ME_belief.jl  generative_model_tests.jl  minex_definition.jl  model_test.jl  process_results.jl  run_DDPM250_tree_search.sh  run_DDPM250_voi.sh  run_DDPM500_voi.sh  run_baselines.sh  run_cDGMs.sh  run_everything.jl  run_experiment.jl  vis_belief.jl  voi_policy.jl
src/: complete_test.py  full_metric_test.py  inference_test.py  main.py  main_utils.py  test.py  utils.py  (+1 more)
(+224 files in other folders)
