[tool.poetry]
name = "deepgenerativemodelsccs"
version = "0.1.0"
description = ""
authors = ["AntoineBigeard <abigeard@stanford.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.1"
pytorch-lightning = "^1.7.7"
h5py = "^3.7.0"
pandas = "^1.5.0"
seaborn = "^0.12.1"
scipy = "^1.9.3"
fire = "^0.5.0"
einops = "^0.6.0"
torchvision = "^0.14.1"
kornia = "^0.6.9"
vector-quantize-pytorch = "^0.10.14"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
