[tool.poetry]
name = "deepgenerativemodelsccs"
version = "0.1.0"
description = ""
authors = ["AB"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
pytorch-lightning = "^1.7.7"
h5py = "^3.7.0"
pandas = "^1.5.0"
seaborn = "^0.12.1"
scipy = "^1.9.3"
fire = "^0.5.0"
einops = "^0.6.0"
kornia = "^0.6.9"
vector-quantize-pytorch = "^0.10.14"
tikzplotlib = "^0.10.1"
tensorboard = "^2.12.0"
matplotlib2tikz = "^0.7.6"
torchtext = "^0.15.1"
spacy = "^3.5.1"
portalocker = "^2.7.0"
nbconvert = "^7.3.1"
torchvision = "^0.15.1"
taming-transformers-rom1504 = "^0.0.6"
clip = "^0.2.0"
transformers = "^4.28.1"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
